# continua

./: .gitignore  Guida_Progetto_Gruppo6.txt  README.md  benchmark.py  benchmark_results.txt  compare_results.py  distNN_64omp_size-2000x256_nq-2000.ds2  test.py  test_edge_cases.py
ProgettoGruppo6/: README.md  pyproject.toml  setup.py
ProgettoGruppo6/src/32/: main.c  quantpivot32.c  quantpivot32.nasm  quantpivot32_py.c  quantpivot64_py.c  quantpivot64omp_py.c
ProgettoGruppo6/src/64/: main.c  quantpivot64.c  quantpivot64_py.c
ProgettoGruppo6/src/64omp/: quantpivot64omp.c
