[build-system]
requires = ["setuptools", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = 'gruppo6'
version = "1.0"
authors = [
    {name = "Benedetta Calonico", email = "clnbdt03r60c349m@studenti.unical.it"},
    {name = "Francesco Pio Ceraudo", email = "crdfnc03l05d122j@studenti.unical.it"},
    {name = "Rosario Chiappetta", email = "chprsr03h28d086a@studenti.unical.it"},
]
description = "Quantized Index for K-NN search"
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = ["numpy"]